[package]
name = "starpu_tcp"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name         = "starpumpi"
crate-type   = ["cdylib"]

[dependencies]
localmacros = {path = "localmacros"}
pnet = "0.30.0"
ipnetwork = "0.19.0" # use the version required by pnet
env_logger = "0.9.0"
log = "0.4.8" # use the version of env_logger
futures = "0.3"
tracing-mutex = {version="*", optional=true}
vigil = {version="0.2.0", optional=true}
bitvec = "1.0.1"

[build-dependencies]
bindgen = "0.59.2"
pkg-config = "0.3.16"

[features]
# Enable watchdog and mutex dead lock detection
debug=["dep:vigil", "dep:tracing-mutex"]
