[package]
name = "starpu_tcp"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name         = "starpumpi"
crate-type   = ["cdylib"]

[dependencies]
pnet = "0.35.0"
ipnetwork = "0.21.1"
env_logger = "0.11.9"
log = "0.4.29"
futures = "0.3.32"
tracing-mutex = {version="0.3.2", optional=true}
vigil = {version="0.2.1", optional=true}
bitvec = "1.0.1"

[build-dependencies]
bindgen = "0.72.1"
pkg-config = "0.3.32"

[features]
# Enable watchdog and mutex dead lock detection
debug=["dep:vigil", "dep:tracing-mutex"]

[lints.rust]
unused = "warn"
warnings = "warn"
unused_qualifications = "warn"
nonstandard_style = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
missing_panics_doc = "allow"
match_same_arms = "allow"
cast_possible_truncation = "allow"
missing_errors_doc = "allow"
cargo_common_metadata = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
inline_always = "allow"
cast_sign_loss = "allow"
multiple_crate_versions = "allow" # because of Lindel using old num
significant_drop_tightening = "allow"
while_float = "allow"
missing_safety_doc = "allow"
